Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -448,6 +448,7 @@ Verbs & finnish  & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.36 (0.
   \include{figures/turkish_verbs/comparison}
   \include{figures/hungarian_verbs/comparison}
   \include{figures/finnish_verbs/comparison}
+  \include{figures/korean/comparison}
   
     \caption{Real and optimized ordering (verbs)}
     \label{tab:my_label}
