--- a/name.tex
+++ b/name.tex
@@ -585,52 +585,33 @@ non-concatenative morphology (in Arabic, k-t-b `to write' forms katab- `wrote'. 
 \subsection{Korean Verb Suffixes}
 
 Korean verb morphology is very complex, and there is no generally agreed-upon description in terms of morphemes and slots.
-We extracted suffixes based on the annotation found in the corpus and the linguistic literature on Korean \citep[4.1.2]{yeon2010korean}.
-Our segmentation is more fine-grained than the annotation found in the corpus, but it also abstracts away more consistently from allomorphy.
+We extracted suffixes based on the annotation found in the Kaist corpus and the linguistic literature on Korean \citep{yeon2010korean}.
+The Kaist corpus provides segmentation into morphemes; we postprocessed it in two ways:
+First, we made it more fine-grained by splitting morphemes that are merged in the annotation, and, second, we abstracted away consistently from allomorphy.
+For instance, the Kaist corpus separately labels the segments \korean{ㅂ니다} \textit{-mnida} (as in \korean{합니다} \textit{hamnida} `does') and \korean{습니다} \textit{-seumnida} (as in \korean{했습니다} \textit{hatseumnida} `did').
+These two segments actually are allomorphs, conditioned by the preceding material.
+Furthermore, they can both be segmented into the formal marker \korean{ㅂ/습} (\textit{-p/-seup}, we label this underlying morpheme ``\textsc{p}$_5$'', see below for this notation), and the mood markers \korean{니} (\textit{-ni}, our \textsc{ni}$_6$) and \korean{다} (\textit{-da}, our \textsc{da}$_7$).
+We therefore transform both segments into the abstract morpheme sequence \textsc{p}$_5$-\textsc{ni}$_6$-\textsc{da}$_7$ (see below for this notation).
 We then partitioned the resulting morphemes into slots that make it possible to consistently describe the ordering of almost all forms encountered in the corpus.
 
 
+With this procedure, we identified the nine slots described below. We show morphemes occurring at least 50 times in slots 2-8 in Figure~\ref{tab:korean-frequent-morphemes}.
+We do not provide the list of conjunctive and nominalizing suffixes since these are very numerous.
 
-\paragraph{Korean Verbs}
-
-We then considered morphemes occurring at least 50 times:
-
-\citep{yeon2010korean}
+Additional morphemes that occur less than X times are placed into an UNKNOWN slots, this affects X \% of morpheme occurrences in the dataset.
+We indicate morphemes by a small-caps representation of a stylized phonological representation (such as \textsc{p} for -\korean{ㅂ/습}  -\textit{p/seup}),\footnote{These transcriptions are purely conventional, we do not intend these to correspond to a theory of how underlying phonological forms are realized as surface phone strings.} with a subscript indicating their slot (such as \textsc{p}$_5$-\textsc{ni}$_6$-\textsc{da}$_7$).
 
 \begin{enumerate}
-    \item Root (Valency is not separated in the dataset)
-    \item Derivation:
+    \item Root
+    %. The root may include a valency suffix, which is not separated frem the root in the dataset. We did not attempt to separate v
+    \item Derivation: The two derivational suffixes are \textit{ha} (\citep[4.1.2]{yeon2010korean}) and the predicative \textit{i}, whose function is similar to that of a copula \citep[4.1.4]{yeon2010korean}.
     
-    ha (from hada, \citep[4.1.2]{yeon2010korean}), i (predicative, \citep[4.1.4]{yeon2010korean})
+    \item Honorific \textsc{si}$_3$ \citep[4.3.2, 4.4.1]{yeon2010korean}
+    \item Tense/Aspect suffixes include -\textsc{ess}$_4$ for past \citep[4.5.1.1]{yeon2010korean}, -\textsc{essess}$_4$ for remote past \citep[4.5.1.2]{yeon2010korean}, -\textsc{get}$_4$ for future \citep[4.5.2.1]{yeon2010korean}
+    \item Formality \textsc{p}$_5$ (allomorphs include -\textit{p}-, -\textit{m}-, -\textit{seum}-,  \citep[4.3.2]{yeon2010korean})
+    \item We partition Mood suffixes into two slots. Frequent elements of the Mood I slot are -\textsc{n}-, -\textsc{ni}- \citep[4.3.2]{yeon2010korean}.
     
-    \item Honorific -s- \citep[4.3.2, 4.4.1]{yeon2010korean}
-    \item Tense/Aspect: -ess- for past \citep[4.5.1.1]{yeon2010korean}, -essess- for remote past \citep[4.5.1.2]{yeon2010korean}, -keyss- for future \citep[4.5.2.1]{yeon2010korean}
-    \item Formality -p- \citep[4.3.2]{yeon2010korean}
-    \item Mood 1:
-    
-    -n-
-    
-    -ni- \citep[4.3.2]{yeon2010korean}
-    
-    -ri-
-    
-    -deon-
-    
-    \item `Pragmatic Mood'
-    
-    -da- \citep[4.3.2]{yeon2010korean}
-    
-    -ra- 
-    
-    Interrogative -ka, -lkka, -nya
-    
-    -ji \citep[4.2.2-3]{yeon2010korean}
-    
-    -eo (informal)
-    
-    -sida \citep[4.3.2]{yeon2010korean}
-    
-    ....
+    \item Frequent elements of the Mood II slot are declarative -\textsc{da}- \citep[4.3.2]{yeon2010korean}, command -\textsc{ra}-, interrogative -\textsc{ka}-, the suffix  -\textsc{ji} \citep[4.2.2-3]{yeon2010korean}, and informal -\textsc{eo}- (informal).
     
     \item Polite -yo
     \item Conjunctive endings
@@ -666,58 +647,6 @@ wish  & &  Assertive && & informal & polite \\
 \end{tabular}
 
 
-We identified the following slots:
-
-\begin{enumerate}
-    \item Root (Valency is not separated in the dataset)
-    \item Derivation:
-    
-    ha (from hada, \citep[4.1.2]{yeon2010korean}), i (predicative, \citep[4.1.4]{yeon2010korean})
-    
-    \item Honorific -s- \citep[4.3.2, 4.4.1]{yeon2010korean}
-    \item Tense/Aspect: -ess- for past \citep[4.5.1.1]{yeon2010korean}, -essess- for remote past \citep[4.5.1.2]{yeon2010korean}, -keyss- for future \citep[4.5.2.1]{yeon2010korean}
-    \item Formality -p- \citep[4.3.2]{yeon2010korean}
-    \item Mood 1:
-    
-    -n-
-    
-    -ni- \citep[4.3.2]{yeon2010korean}
-    
-    -ri-
-    
-    -deon-
-    
-    \item `Pragmatic Mood'
-    
-    -da- \citep[4.3.2]{yeon2010korean}
-    
-    -ra- 
-    
-    Interrogative -ka, -lkka, -nya
-    
-    -ji \citep[4.2.2-3]{yeon2010korean}
-    
-    -eo (informal)
-    
-    -sida \citep[4.3.2]{yeon2010korean}
-    
-    ....
-    
-    \item Polite -yo
-    \item Conjunctive endings
-    
-    -go
-    
-    -seo
-    
-    and others
-    
-\end{enumerate}
-
-
-We show morphemes occurring at least 50 times in slots 1-8 in Figure~\ref{tab:korean-frequent-morphemes}.
-
-
 Frequent morphemes:
 \begin{table}
 \resizebox{1.2\textwidth}{!}{
@@ -725,7 +654,7 @@ Frequent morphemes:
 Slot & Morphs & Short & Freq. & Description & Citation \\ \hline\hline
 Derivation & \korean{하} & HA$_2$ &	 68 & & \citep[4.1.2]{yeon2010korean}\\
 & i & I$_2$ &	 3947 && \citep[4.1.4]{yeon2010korean} \\ \hline
-Honorific & si 	& SI$_3$ & 99 & &\citep[4.3.2, 4.4.1]{yeon2010korean}\\\hline
+Honorific & si 	& \textsc{si}$_3$ & 99 & &\citep[4.3.2, 4.4.1]{yeon2010korean}\\\hline
 Tense/Asp. & \korean{었었} 	& ESSESS$_4$ &  56&& \citep[4.5.1.2]{yeon2010korean} \\
 &get 	& GET$_4$ & 355 & assertive & \citep[4.5.2.1]{yeon2010korean}\\
 & &ESS$_4$ &	 9720 & past& \citep[4.5.1.1]{yeon2010korean}\\\hline
@@ -754,7 +683,9 @@ Infinitive -eo: -eora/-ara for imperative \citep[4.3.6.4]{yeon2010korean}
 
 Next, we explain how our segmentation corresponds to commonly described paradigms.
 First, in Table~\ref{tab:korean-styles}, we describe the correspondence to the speech style system described by \citep[4.3.2]{yeon2010korean}.
-
+Second, in Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-3}, we show the paradigm for the verb \korean{하다} \textit{hada} `to do' as described in Wiktionary.\footnote{ \texttt{https://en.wiktionary.org/wiki/\korean{하다}} (retrieved Septemgber 16, 2020).}
+In Table~\ref{tab:kroean-itda}, we show the part of the paradigm of the verb \textit{ida} `to be' corresponding to Table~\ref{tab:korean-hada-1} (the other parts of the paradigm are analogous to those of \textit{hada}).
+Note that none of these paradigms are intended to be exhaustive lists of all forms of these verbs; instead, they represent commonly used forms in a systematic paradigmatic representation.
 
 
 \begin{table}
@@ -764,8 +695,8 @@ Formal      &  \korean{ㅂ니다} & \korean{ㅂ니까} & \korean{지-ㅂ-지오}
       &  -mnida & -mnikka  & -sipsio & -sipsida  \\ 
       &  -P$_5$-NI$_6$-DA$_7$ & -P$_5$-NI$_6$-KKA$_7$  & -SI-P$_5$-SIO$_7$ & -SI$_3$-P$_5$-SIDA$_7$ \\ \hline
 Polite      &  \multicolumn{4}{c}{\korean{아/어/요}}  \\
-      &  \multicolumn{4}{c}{-a/eo/yo}  \\
-            & \multicolumn{4}{c}{-A/EO/YO} \\ \hline
+      &  \multicolumn{4}{c}{-a/eoyo}  \\
+            & \multicolumn{4}{c}{-\textsc{eo}$_7$-\textsc{eo}$_8$} \\ \hline
 Semi-Formal & \korean{오/소}   &           &   \korean{오}       &  \korean{-ㅂ-지다} \\
 &  -o/so   &           & -o        & -p-sida \\
  &  -O$_7$/-SO$_7$   &           & -O$_7$    & -P$_5$-SIDA$_7$ \\\hline
@@ -774,16 +705,15 @@ Familiar    &    \korean{네}    &  \korean{나/는가} &  \korean{게}      &  
             & -NE$_7$                  & -NA$_7$/-NEUNKA$_7$ & -GE$_9$ & \textcolor{red}{-SE} \\ \hline
 Intimate      &  \multicolumn{4}{c}{\korean{아/어}}  \\
       &  \multicolumn{4}{c}{-a/eo}  \\
-            & \multicolumn{4}{c}{-A/EO$_7$} \\ \hline
+            & \multicolumn{4}{c}{-\textsc{eo}$_7$} \\ \hline
 Plain       &   \korean{다}     &  \korean{(느)냐} &  \korean{라}     &  \korean{자}\\
             &  -da    &  -(neu)nya & -ra      & -ja \\
             & -DA$_7$    &   -NYA$_7$          & -RA$_7$      & -JA$_7$\\
 \end{tabular}
-\caption{Correspondence between our morpheme segmentation and the speech style system described by \citep[4.3.2]{yeon2010korean}.}\label{tab:korean-styles}
+\caption{Correspondence between our morpheme segmentation and the speech style system described by \citep[4.3.2]{yeon2010korean}. In each cell, we provide the Hangul ending given by \citep{yeon2010korean}, a transliteration, and a representation in terms of underlying morphemes.}\label{tab:korean-styles}
 \end{table}
 
-Second, in Table~\ref{tab:korean-hada}, we show a paradigm for a verb \korean{하다} \texttt{https://en.wiktionary.org/wiki/\korean{하다}}
-We only show the forms without the honorific; forms with honorific are created by placing -SI$_3$ into the appropriate slot.
+
 
 \begin{table}
 \begin{tabular}{llllllllll}
@@ -831,7 +761,7 @@ Assertive   && \korean{하겠다}  & \korean{하겠어}  & \korean{하겠어요}
 &&  px+ep+ef          & pvg+ep+ef   & pvg+ep+ef+jxf & pvg+ep+ef\\
 \hline
 \end{tabular}
-	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary (retrieved September 16, 2020).}\label{tab:korean-hada}
+	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary and in the Kaist treebank. In each cell, we provide the Hangul (e.g., \korean{한다}) and transliterated (e.g., handa) forms given by Wiktionary, a representation in terms of underlying morphemes (e.g., -N$_6$-DA$_7$), and -- where available -- how the form is segmented in the Kaist corpus (e.g., \korean{하+ㄴ다} and px+ef).}\label{tab:korean-hada-1}
 \end{table}
 
 \begin{table}
@@ -856,9 +786,42 @@ Motive && \korean{하려고} \\
  && haryeogo \\
 && -RYEOGO$_9$
 \end{tabular}
-	\caption{Correspondence between our morpheme segmentation and the paradigm of \textit{hada} `to do' as described by Wiktionary (retrieved September 16, 2020).}\label{tab:korean-hada}
+	\caption{Continuation of Table~\ref{tab:korean-hada-1}: Forms of \textit{hada} with a conjunctive ending.}\label{tab:korean-hada-2}
 \end{table}
 
+
+
+\begin{table}[]
+    \centering
+    \begin{tabular}{llllllllllllllllllllllllll}
+           &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
+\multirow{2}{*}{Indicative} & Non-past & \korean{하신다} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니다} \\
+                           && -SI-N-DA & SI-EO & SI-EO-YO & SI-P-NI-DA \\
+&& \korean{하+시+ㄴ다}       &   --   &    \korean{하+시+어+요}             &  \korean{하+시+ㅂ니다}        \\
+\hline
+&& \korean{하셨다} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니다} \\
+&& SI-ESS-DA & SI-ESS-EO & SI-ESS-EO-YO & SI-ESS-P-NI-DA \\
+& & \korean{하+셨+다}       &  --    &        --        &  \korean{하+셨+습니다}       \\
+\hline
+\multirow{2}{*}{Interrogative} & Non-past & \korean{하시느냐} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니까} \\
+&& SI-NEUNYA & SI-EO & SI-EO-YO & SI-P-NIKKA \\
+& &   --     &   --   &   \korean{하+시+어+요}             &  --        \\
+\hline
+& Past & \korean{하셨느냐} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니까} \\
+&      & SI-ESS-NEUNYA & SI-ESS-EO          & SI-ESS-EO-YO & SI-ESS-P-NIKKA \\
+& &        &      &                &          \\
+\hline
+\multirow{2}{*}{Imperative} && \korean{하시라} & \korean{하셔} & \korean{하세요} & \korean{하십시오} \\
+&& -SI-RA & -SI-EO & -SI-EO-YO & -SI-P-SIO \\
+&        &      & \korean{하+시+어+}               &   \korean{하+십시오}       \\
+\hline
+\multirow{2}{*}{Assertive} & & \korean{하시겠다} & \korean{하시겠어} & \korean{하시겠어요} & \korean{하시겠습니다} \\
+&        &  -SI-GESS-DA     &  -SI-GESS-EO              &  -SI-GESS-EO-YO & -SI-GESS-P-NI-DA        \\
+&& -- & -- & -- & -- \\
+    \end{tabular}
+    \caption{Continuation of Tables~\ref{tab:korean-hada-1}--\ref{tab:korean-hada-2}: Conjugation of hada with an honorific (\textsc{si}$_3$). We provide Hangul forms, morpheme sequences, and -- where available -- segmentations as given in the Kaist corpus.}
+    \label{tab:korean-hada-3}
+\end{table}
 
 %itda \url{https://en.wiktionary.org/wiki/%EC%9E%88%EB%8B%A4#Korean}
 
@@ -892,53 +855,25 @@ Motive && \korean{하려고} \\
          &  & +ep+f             &           & paa+ep+ef+jxf & paa+ep+ef\\
     \end{tabular}
     \caption{Conjugation of itda}
-    \label{tab:my_label}
-\end{table}
-
-\begin{table}[]
-    \centering
-    \begin{tabular}{llllllllllllllllllllllllll}
-           &          &Formal non-polite & Informal non-polite & Informal polite & Formal polite \\ \hline \hline
-\multirow{2}{*}{Indicative} & Non-past & \korean{하신다} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니다} \\
-                           && -SI-N-DA & SI-EO & SI-EO-YO & SI-P-NI-DA \\
-&& \korean{하+시+ㄴ다}       &   --   &    \korean{하+시+어+요}             &  \korean{하+시+ㅂ니다}        \\
-\hline
-&& \korean{하셨다} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니다} \\
-&& SI-ESS-DA & SI-ESS-EO & SI-ESS-EO-YO & SI-ESS-P-NI-DA \\
-& & \korean{하+셨+다}       &  --    &        --        &  \korean{하+셨+습니다}       \\
-\hline
-\multirow{2}{*}{Interrogative} & Non-past & \korean{하시느냐} & \korean{하셔} & \korean{하세요, 하셔요} & \korean{하십니까} \\
-&& SI-NEUNYA & SI-EO & SI-EO-YO & SI-P-NIKKA \\
-& &   --     &   --   &   \korean{하+시+어+요}             &  --        \\
-\hline
-& Past & \korean{하셨느냐} & \korean{하셨어} & \korean{하셨어요} & \korean{하셨습니까} \\
-&      & SI-ESS-NEUNYA & SI-ESS-EO          & SI-ESS-EO-YO & SI-ESS-P-NIKKA \\
-& &        &      &                &          \\
-\hline
-\multirow{2}{*}{Imperative} && \korean{하시라} & \korean{하셔} & \korean{하세요} & \korean{하십시오} \\
-&& -SI-RA & -SI-EO & -SI-EO-YO & -SI-P-SIO \\
-&        &      & \korean{하+시+어+}               &   \korean{하+십시오}       \\
-\hline
-\multirow{2}{*}{Assertive} & & \korean{하시겠다} & \korean{하시겠어} & \korean{하시겠어요} & \korean{하시겠습니다} \\
-&        &  -SI-GESS-DA     &  -SI-GESS-EO              &  -SI-GESS-EO-YO & -SI-GESS-P-NI-DA        \\
-&& -- & -- & -- & -- \\
-    \end{tabular}
-    \caption{Korean conjugation (hada) with honorific.}
-    \label{tab:my_label}
+    \label{tab:kroean-itda}
 \end{table}
 
 
-\begin{longtable}{lllll}
-NOMINALIZER-future-determiner-\korean{을} & EUL &	 128 \\
-NOMINALIZER-topic?past-determiner-\korean{은} & EUN&	 129 \\
-NOMINALIZER-nominalizer-informal-nonpolite-gi & GI &	 151 \\
-NOMINALIZER-nominalizer-formal-nonpolite-m 	& M & 216 \\
-\end{longtable}
+
+%\begin{longtable}{lllll}
+%NOMINALIZER-future-determiner-\korean{을} & EUL &	 128 \\
+%NOMINALIZER-topic?past-determiner-\korean{은} & EUN&	 129 \\
+%NOMINALIZER-nominalizer-informal-nonpolite-gi & GI &	 151 \\
+%NOMINALIZER-nominalizer-formal-nonpolite-m 	& M & 216 \\
+%\end{longtable}
 
 
 \subsection{Turkish Verb Suffixes}
 
-\url{https://en.wiktionary.org/wiki/yapmak#Turkish}
+In Table~\ref{tab:turkish-suffixes}, we show the list of identified Turkish verb suffixes.
+In Figure~\ref{tab:turkish-yapmak}, we show how our segmentation corresponds to the paradigm of yapmak as described by Wiktionary.\footnote{From https://en.wiktionary.org/wiki/yapmak\#Turkish, retrieved September 5, 2020.}
+
+
 
 \begin{table}
 \resizebox{\textwidth}{!}{
@@ -962,7 +897,7 @@ NOMINALIZER-nominalizer-formal-nonpolite-m 	& M & 216 \\
                &              & -IYOR-MUS-IM &	-IYOR-MUS-SUN &	-IYOR-MUS &	-IYOR-MUS-UZ &	-IYOR-MUS-SUNUZ &	-IYOR-LAR-MUS \\
 \end{tabular}
 }
-\caption{Turkish}
+\caption{Turkish}\label{tab:turkish-yapmak}
 \end{table}
 
 \begin{table}
@@ -1002,7 +937,7 @@ Poss Num/Pers & \\
 Gen & \\
 \hline
 \end{tabular}
-\caption{Suffixes in Turkish}
+\caption{Suffixes in Turkish}\label{tab:turkish-suffixes}
 \end{table}
 
 
@@ -1010,9 +945,43 @@ Gen & \\
 
 \subsection{Hungarian Verb Suffixes}
 
-\url{https://en.wiktionary.org/wiki/tesz#Hungarian}
-\url{https://en.wiktionary.org/wiki/csinál}
-\url{https://en.wiktionary.org/wiki/ismer#Hungarian}
+
+In Table~\ref{tab:hungarian-suffixes}, we show the list of identified Hungarian verb suffixes.
+In Figure~\ref{tab:hungarian-paradigms}, we show how our segmentation corresponds to the paradigm of three verbs as described by Wiktionary.\footnote{From \texttt{https://en.wiktionary.org/wiki/tesz},
+\texttt{https://en.wiktionary.org/wiki/csinál},
+\texttt{https://en.wiktionary.org/wiki/ismer}, retrieved September 5, 2020.}
+
+
+
+
+
+\begin{table}
+    \centering
+    \begin{tabular}{lllllllll}
+    \hline
+Valence	    & AT & Causative \\ \hline
+Mood	    & HET & Potential \\
+         & N & conditional \\
+         & J & subjunctive \\
+\hline
+Tense& T & indicative past \\
+         \hline
+Finiteness  & NI & Infinitive \\
+\hline
+%Definiteness & I & definite 2/3pl \\
+%         \hline
+Agreement (Obj+Subj)         & EK & 1sg indefinite present\\
+         & EL & 2sg present\\
+         & UNK & 1pl present\\
+         & TEK & 2pl\\
+         & NEK & 3pl present\\
+         & EM & 1sg past or definite \\
+         & ED & 2sg definite \\
+         \hline
+    \end{tabular}
+    \caption{Hungarian verb suffixes}
+    \label{tab:hungarian-suffixes}
+\end{table}
 
 \begin{table}[]
     \centering
@@ -1063,42 +1032,15 @@ ismerjed &	ismerje &	ismerjük &	ismerjétek & ismerjék
     \end{tabular}
     }
     \caption{Hungarian verb suffixes (tense, mood, definitiness, person/number).}
-    \label{tab:my_label}
+    \label{tab:hungarian-paradigms}
 \end{table}
 
-\begin{table}
-    \centering
-    \begin{tabular}{lllllllll}
-    \hline
-Valence	    & AT & Causative \\ \hline
-Mood	    & HET & Potential \\
-         & N & conditional \\
-         & J & subjunctive \\
-\hline
-Tense& T & indicative past \\
-         \hline
-Finiteness  & NI & Infinitive \\
-\hline
-%Definiteness & I & definite 2/3pl \\
-%         \hline
-Agreement (Obj+Subj)         & EK & 1sg indefinite present\\
-         & EL & 2sg present\\
-         & UNK & 1pl present\\
-         & TEK & 2pl\\
-         & NEK & 3pl present\\
-         & EM & 1sg past or definite \\
-         & ED & 2sg definite \\
-         \hline
-    \end{tabular}
-    \caption{Hungarian verb suffixes}
-    \label{tab:my_label}
-\end{table}
 
-\section{Sesotho}
+\subsection{Sesotho}
 
-\paragraph{Sesotho Verbs}
 We describe Sesotho verb affixes following \cite{Hahn2020modeling}.
-who described these based on \citep{doke1967textbook, guma1971outline, demuth1992acquisition}
+who described these based on \citep{doke1967textbook, guma1971outline, demuth1992acquisition}.
+We refer to \cite{Hahn2020modeling} for further details.
 
 \begin{enumerate}
     \item Subject agreement: This morpheme encodes agreement with the subject, for person, number, and noun class (the latter only in the 3rd person) \cite[\textsection 395]{doke1967textbook}.
@@ -1122,10 +1064,11 @@ We identified the following suffixes:
     \item Interrogative and relative markers
 \end{enumerate}
 
-\section{Japanese}
+\subsection{Japanese}
 
 \paragraph{Japanese Verbs}
 We describe Japanese verb suffixes following \citep{Hahn2020modeling}, who described these based on \citep{kaiser2013japanese,hasegawa2014japanese}.
+We refer to \citep{Hahn2020modeling} for details.
 
 \begin{enumerate}
 \item \textit{suru}: obligatory suffix after Sino-Japanese words when they are used as verbs
