--- a/figures/hungarian_verbs/comparison-opt-uni.tex
+++ b/figures/hungarian_verbs/comparison-opt-uni.tex
@@ -4,7 +4,7 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
             minimum height=0.65cm, inner sep=0},
 % common options for the circles:
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
-\node[rectangle,text width=1.2cm,anchor=base] (A0) at (4,-0.3) {Real};
+\node[rectangle,text width=1.2cm,anchor=base] (A0) at (4,-0.3) {Universal};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (1,-0.3) {Optimized};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (4,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (4,-1.5) {Voice};
@@ -18,7 +18,7 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (B4) at (1,-2.5) {Agr};
 \node[rectangle,text width=1.2cm,anchor=base] (B5) at (1,-3.0) {Inf};
 \draw[-] (A1.west) to (B1.east);
-\draw[-] (A2.west) to (B4.east);
-\draw[-] (A3.west) to (B5.east);
-\draw[-] (A4.west) to (B6.east);
+\draw[-] (A4.west) to (B2.east);
+\draw[-] (A5.west) to (B3.east);
+\draw[-] (A6.west) to (B4.east);
 \end{tikzpicture}
