Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -513,6 +513,7 @@ Verbs & finnish verbs & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.3
 
 \begin{figure}
 \begin{tabular}{ccccccc}
+\textbf{Finnish} & \textbf{Hungarian} & \textbf{Turkish} \\
 \begin{minipage}{.3\textwidth}
   \include{figures/finnish_verbs/comparison-opt-uni}
     \end{minipage}
@@ -525,6 +526,7 @@ Verbs & finnish verbs & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.3
   \include{figures/turkish_verbs/comparison-opt-uni}
     \end{minipage} 
     \\
+    \textbf{Korean} & \textbf{Japanese} \\
         \begin{minipage}{.3\textwidth}
   \include{figures/korean/comparison-opt-uni}
     \end{minipage}
@@ -533,7 +535,7 @@ Verbs & finnish verbs & 0.4 (0.3) & 0.4 (0.37) & 0.38 (0.31) & 0.39 (0.38) & 0.3
   \include{figures/japanese/comparison-opt-uni}
     \end{minipage}
 \end{tabular}
-    \caption{Caption}
+    \caption{Comparing optimized orders with the universal order described by \citep{bybee-morphology-1985}.}
     \label{fig:my_label}
 \end{figure}
 
