Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -494,13 +494,17 @@ Finnish & Turkish & Hungarian \\
   \include{figures/finnish_verbs/comparison}
   \end{minipage}
   \\
-  \textbf{Korean}  & \textbf{Japanese} & \textbf{Sesotho} \\
+  \textbf{Korean}  & \textbf{Japanese} & \textbf{Sesotho Prefixes} \\
       \begin{minipage}{.3\textwidth}
   \include{figures/korean/comparison}
   \end{minipage}
   &
   \begin{minipage}{.3\textwidth}
   \include{figures/japanese/comparison}
+  \end{minipage}
+  &
+  \begin{minipage}{.3\textwidth}
+  \include{figures/sesotho_prefixes/comparison}
   \end{minipage}
   \end{tabular}
   
